--- a/MyProject/src/css/style.css
+++ b/MyProject/src/css/style.css
@@ -113,6 +113,10 @@ nav{
     font-weight: 600;
 }
 
+.herta img{
+    padding: 30px 0px 20px 900px;
+}
+
 .shtoumeu h3{
     float: left;
     font-size: 16px;
@@ -123,10 +127,9 @@ nav{
 	text-align: center;
 }
 
-.shtoumeu img{
-	position:relative;
-	margin-left: 0%;
-	margin-bottom: 10%;	
+.block img{
+    padding-top: 80px;
+	padding-bottom: 20px;	
 }
 
 .shtoumeu p{
@@ -152,7 +155,7 @@ nav{
 }
 
 .certa img{
-   margin: 0px 0px 20px 895px;
+   margin: 30px 0px 20px 895px;
    
 }
 
@@ -163,7 +166,7 @@ nav{
 }
 
 .keic img{
-    margin-top:40px;
+    margin-top: 30px;
 }
 
 .keic h3{
@@ -187,9 +190,14 @@ nav{
     font-weight: 600;
 }
 
+.cl{
+    float:left;
+    width: 800px;
+}
+
 .naz p{
     color:#3f495a;
-    margin: 10px 0px 0px 400px;
+    margin: 10px 0px 0px 600px;
     font-size: 19px;
     text-align:justify;
     width: 850px;
@@ -204,7 +212,7 @@ nav{
     font-size:15px;
     font-weight: 600;
     padding: 0px 16px;
-    margin:10px 28px 0px 400px;
+    margin:5px 28px 0px 400px;
     width: 180px;
 }
 
@@ -260,19 +268,23 @@ nav{
     font-weight: 600;
 }
 
-.statistica h4{ 
+.hcerta img{
+    padding: 25px 0px 0px 900px;
+}
+
+.bloc h4{ 
     float: left;
     font-size: 16px;
     color:#323e4f;
     font-weight: 600;
-    margin: 123px 140px 10px 0px;
+    margin: 90px 140px 10px 0px;
 	width:210px;
 	text-align: center;
 }
 
-.statistica img{
+.bloc img{
 	position:relative;
-	margin-bottom: 80px;	
+	margin-bottom: 90px;	
 }
 
 .bloc{
@@ -287,8 +299,12 @@ nav{
     font-weight: 600;
 }
 
+.zag {
+  margin: 10px 20px 30px 10px;
+}
+
 .otz img{
-    margin: 96px 0px 20px 885px;
+    margin: 20px 0px 20px 885px;
 }
 
 .otz p{
@@ -343,31 +359,37 @@ nav{
 }
 
 .blok{
+    height: 110px;
     margin-left: 600px;
 }
 
 .podval h3{
-    text-align: center;
     font-size: 20px;
     color:#ffffff;
     font-weight: 600;
-    padding:150px 700px 0px 0px;
+    margin:10px 600px 0px 0px;
 }
 
 .podval input{
- background-color:rgb(218, 221, 227,40); 
+ background-color:rgba(218, 221, 227,1); 
  width: 350px; 
  height: 34px;
  margin-right:20px; 
  color:#5d5d5e;
  font-weight: 600;
  padding-left: 10px;
+margin: 40px 0px 0px 20px;
 }
 
 .soob input{
  padding-bottom: 55px;
  width: 724px; 
  height: 93px;
+ margin:5px 0px 0px 565px;
+}
+
+.vvod{
+    margin-left: 545px;
 }
 
 .otpravit input{
@@ -379,7 +401,7 @@ nav{
     color:#ffffff;
     font-size:15px;
     padding: 0px 16px;
-    margin:58px 28px 0px 870px;
+    margin:10px 28px 0px 870px;
     width: 130px;
     font-weight: 600;
 }
